# ctf-2020-release

./: LICENSE.md
adding-machine/: metadata.yml
adding-machine/challenge/: Dockerfile  flag.txt
adding-machine/deployment/: deployment.yml  service.yml
adding-machine/distfiles/: adder
anagrams/: metadata.yml
barcoder/: metadata.yml
bulls23/: metadata.yml
cards/: metadata.yml
chameleon/: metadata.yml
config-me/: metadata.yml
csp-1/: metadata.yml
csp-1/solution/: README  (+1 more)
csp-2/: metadata.yml
csp-3/: metadata.yml
decrypto-1/: metadata.yml
decrypto-2/: metadata.yml
decrypto-3/: metadata.yml
earota/: metadata.yml
eavesdropper/: metadata.yml
eccmul/: metadata.yml
fortune-cookie/: metadata.yml
fun-with-flags/: metadata.yml
gman/: metadata.yml
had-a-bad-day/: metadata.yml
hashpop/: metadata.yml
haystack/: metadata.yml
hurdles/: metadata.yml
kvaas/: metadata.yml
lockyboxy/: metadata.yml
magic/: metadata.yml
maltty/: metadata.yml
mentalist/: metadata.yml
mini-matroyshka/: metadata.yml
mpfrag/: metadata.yml
onsite/: metadata.yml
open-sesame/: metadata.yml
recipes/: metadata.yml
ripc4/: metadata.yml
rsa-debugger/: metadata.yml
ruler/: metadata.yml
rusty1/: metadata.yml
rusty1/challenge/src/: Cargo.toml
rusty1/challenge/src/src/: main.rs
rusty2/: metadata.yml
simple-todos/: metadata.yml
smart-locky/: metadata.yml
smart-locky2/: distfiles  metadata.yml
strace-me/: metadata.yml
toast-clicker1/: metadata.yml
toast-clicker2/: metadata.yml
toast-clicker3/: metadata.yml
webbleed/: metadata.yml
(+356 files in other folders)
